--- a/src/css/App.css
+++ b/src/css/App.css
@@ -55,7 +55,7 @@ ul{
 
 .navbar-brand {
     font-family: "Ubuntu";
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: bold;
     color:#ffd31d;
 }
@@ -70,14 +70,14 @@ ul{
 }
 
 .nav-link {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-family: "Montserrat-Light";
 }
 
 /* About */
 .project-title{
     font-family: "Ubuntu";
-    font-size: 2.5rem;
+    font-size: 2.0rem;
     line-height:3.5rem;
 }
 
@@ -93,7 +93,7 @@ ul{
 
 .feature-box {
     padding: 4.5%;
-    font-size: 1.3rem;;
+    /* font-size: 1.3rem;; */
 }
 
 .icon {
@@ -110,10 +110,10 @@ ul{
 .card{
  margin:1%;
 }
-
+/* 
 .card-text{
     font-size:1.2rem;
-}
+} */
 
 .price-text {
     font-size: 3rem;
