--- a/src/css/App.css
+++ b/src/css/App.css
@@ -104,6 +104,10 @@ ul{
     font-size: 1.5rem;
 }
 
+.feature-box p{
+    font-size:1.2rem;
+}
+
 .feature-box {
     padding: 4.5%;
     /* font-size: 1.3rem;; */
@@ -132,10 +136,10 @@ ul{
 .card{
  margin:1%;
 }
-/* 
+
 .card-text{
     font-size:1.2rem;
-} */
+}
 
 .price-text {
     font-size: 2.5rem;
